<feat>: campo status no agendamento

--- a/Front-end/Pages/Reserva.razor
+++ b/Front-end/Pages/Reserva.razor
@@ -245,7 +245,8 @@
                 ProfissionalId = servico_escolhido.Id_Profissional,
                 HorarioId = selectedHorario,
                 ServicoId = servico_escolhido.Id_Servico,
-                DiscenteId = userId
+                DiscenteId = userId,
+                Status = "pendente"
             };
 
             var result = await AgendamentoService.SolicitarAgendamento(modelAgendamento);
