--- a/Front-end/Pages/Inicio.razor
+++ b/Front-end/Pages/Inicio.razor
@@ -106,7 +106,7 @@
                                     }
                                 </div>
                                 <div style="padding: 5px 0px; display: flex;">
-                                    <img src="..\css\images\info-agendar.svg">
+                                    <a href="/reserva"><img src="..\css\images\info-agendar.svg"></a>
                                     <a href="/servicos"><img style="padding-left: 20px;" src="..\css\images\info-relatar.svg"></a>
                                 </div>
                             </div>
