--- a/Front-end/wwwroot/css/app.css
+++ b/Front-end/wwwroot/css/app.css
@@ -617,3 +617,31 @@ code {
     border-radius: 20px;
     padding: 32px;
 }
+
+.event {
+    border-radius: 4px;
+    border-left: 4px solid;
+    width: 100%;
+    height: 100%;
+    padding: 0px 10px;
+}
+
+.event-title {
+    font-size: 0.75rem;
+    font-weight: 700;
+}
+
+.event-time {
+    font-size: 0.5em;
+    font-weight: 500;
+}
+
+.topico-agendamento{
+    font-size: 0.75rem;
+    font-weight: 500;
+}
+
+.data-agendamento{
+    font-size: 1rem;
+    font-weight: 600;
+}
