--- a/Front-end/Pages/Agenda.razor
+++ b/Front-end/Pages/Agenda.razor
@@ -134,7 +134,7 @@
                                             <span class="topico-agendamento">Fim</span>
                                             <span class="data-agendamento">@compromisso.TimeFim</span>
                                         </div>
-                                        <div>
+                                        <div style="cursor: pointer;" @onclick="() => excluirCompromisso(compromisso.ID)">
                                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M3 6H21" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M19 6V20C19 21 18 22 17 22H7C6 22 5 21 5 20V6" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -172,7 +172,7 @@
                                             <span class="topico-agendamento">Fim</span>
                                             <span class="data-agendamento">@compromisso.TimeFim</span>
                                         </div>
-                                        <div>
+                                        <div style="cursor: pointer;" @onclick="() => excluirCompromisso(compromisso.ID)">
                                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M3 6H21" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M19 6V20C19 21 18 22 17 22H7C6 22 5 21 5 20V6" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -280,6 +280,16 @@
         public string Title { get; set; }
         public string Person { get; set; }
         public List<string> Colors { get; set; }
+    }
+
+    private async Task excluirCompromisso(int id_compromisso){
+        var result = await AgendamentoService.ExcluirAgendamento(id_compromisso);
+
+        if (result.IsSuccessStatusCode)
+        {
+            Events.RemoveAll(e => e.ID == id_compromisso);
+            
+        }
     }
 }
 
