--- a/Front-end/Pages/Agenda.razor
+++ b/Front-end/Pages/Agenda.razor
@@ -110,14 +110,14 @@
                                         Title = compromisso.Title;
                                         Person = compromisso.Person;
 
-                                        <div class="event" style="display: flex; background-color:@compromisso.Colors[0]; color: @compromisso.Colors[1]; border-color: @compromisso.Colors[2]; height: 2.5rem; align-items: center;">
+                                        <div class="event" style="display: flex; background-color:@compromisso.Colors[0]; color: @compromisso.Colors[1]; border-color: @compromisso.Colors[2]; height: 2.5rem; align-items: center; margin-bottom: 10px;">
                                             <div class="event-title">@compromisso.Title</div>
                                             <div class="event-title">&nbsp;| @compromisso.Person</div>
                                         </div>
 
                                     }
 
-                                    <div style="display: flex; justify-content: space-between; padding: 10px 30px; align-items: center;">
+                                    <div style="display: flex; justify-content: space-between; padding: 0px 30px 15px 30px; align-items: center;">
                                         <div style="display: flex; flex-direction: column;">
                                             <span class="topico-agendamento">Data</span>
                                             <span class="data-agendamento">@compromisso.Day.ToString("dd/MM/yyyy")</span>
@@ -155,7 +155,7 @@
 
                                     }
 
-                                    <div style="display: flex; justify-content: space-between; padding: 10px 30px; align-items: center;">
+                                    <div style="display: flex; justify-content: space-between; align-items: center;">
                                         <div style="display: flex; flex-direction: column;">
                                             <span class="topico-agendamento">Data</span>
                                             <span class="data-agendamento">@compromisso.Day.ToString("dd/MM/yyyy")</span>
